# tingfeng_discord

./: .gitignore  README.md  bot.py  pyproject.toml  quotes.txt
tests/: test_tingfeng_discord.py
tfquotebot/: __init__.py  __main__.py  bot.py  vars.py
tingfeng_discord/: bot.py
