[tool.poetry]
name = "tingfeng-discord"
version = "0.1.0"
description = "Ting Feng Quotes Discord bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
"discord.py" = "^1.3.3"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
